Fix task-pane getting too large

--- a/web/src/app/task-page-content-list/task-page-content-list.component.scss
+++ b/web/src/app/task-page-content-list/task-page-content-list.component.scss
@@ -1,5 +1,4 @@
 :host {
-    min-width: 50%;
     flex-grow: 1;
     max-height: calc(100vh - (48px * 2));
     overflow-y: scroll;
