--- a/web/src/app/task-page-content-pane/task-page-content-pane.component.scss
+++ b/web/src/app/task-page-content-pane/task-page-content-pane.component.scss
@@ -1,6 +1,6 @@
 :host {
+    max-width: 95vw;
     min-width: 300px;
     flex-shrink: 0;
     flex-grow: 0;
-    // background-color: lighten(orange, 40);
 }
